# EconometricsML

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  python totual.md  requirements-base.txt  requirements.txt  rerun_all_notebooks.ps1  run_notebook_exec.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: execute-notebooks.yml
academic/: A01_文献检索与高效阅读.ipynb  A02_选题与开题报告.ipynb  A03_期刊选择与投稿.ipynb  A04_SCI小论文写作全指南.ipynb  A05_毕业大论文.ipynb  A06_学术裁缝写作方法.ipynb  A07_数据获取服务.ipynb  README.md
data/sample/: README.md
docs/: README.md  api_reference.md  faq.md  ml_guide.md  python-quickstart.md  stata-python-workflow.md  stata-workflow.md
econml/: __init__.py
econml/econometric_models/: __init__.py  extended.py  garch.py  ols.py  var.py
econml/ml_models/: __init__.py  advanced.py  deep_learning.py  ensemble.py  neural_network.py
econml/rl_models/: __init__.py  advanced.py  portfolio_rl.py
econml/utils/: __init__.py  data_utils.py  evaluation.py  visualization.py
empirlab/: README.md  __init__.py
empirlab/dl/: __init__.py  lstm_forecast.py  mlp.py  mlp_regression.py  mlp_regressor.py  tcn_forecast.py
empirlab/llm/: __init__.py  agent_data_clean.py  info_extraction.py  llm_annotator.py  prompt_client.py  rag_lit_review.py  sentiment_index.py  text_classification.py  text_to_regression.py
empirlab/ml/: __init__.py  bart.py  causal_forest.py  conformal_pred.py  double_ml.py  factor_model.py  high_dim_iv.py  lasso_select.py  random_forest.py  regularized.py  svm_model.py  synthetic_did.py  text_ml.py  tree_models.py
empirlab/rl/: __init__.py  dqn_agent.py  portfolio_env.py  q_learning_agent.py
empirlab/traditional/: __init__.py  did.py  event_study.py  garch.py  iv.py  logit.py  ols.py  panel.py  psm.py  rd.py  synthetic_control.py  var.py
empirlab/utils/: __init__.py  data_io.py  metrics.py  preprocessing.py  visualization.py
examples/: 01_ols_regression.py  02_var_forecasting.py  03_garch_volatility.py  04_ensemble_prediction.py  README.md  requirements.txt
examples/deep_learning/: 01_MLP.md  01_MLP.py  02_CNN.md  02_CNN.py  03_RNN_LSTM.md  03_RNN_LSTM.py  04_Transformer.md  04_Transformer.py  05_Autoencoder.md  05_Autoencoder.py
examples/econometrics/: 01_OLS.md  01_OLS.py  01_OLS_Angrist2008.ipynb  01_OLS_Angrist2008_clean.ipynb  01_ols_wage_equation.py  02_IV.md  02_IV.py  02_did_minimum_wage.py  03_FixedEffects.md  03_FixedEffects.py  03_iv_returns_to_education.py  04_RandomEffects.ipynb  04_RandomEffects.md  04_RandomEffects.py  04_double_ml_treatment_effect.py  05_DiD.md  05_DiD.py  05_lasso_variable_selection.py  06_GMM.md  06_GMM.py  06_causal_forest_hte.py  07_ARIMA.md  07_ARIMA.py  08_VAR.md  08_VAR.py  09_GARCH.md  09_GARCH.py  10_ProbitLogit.md  10_ProbitLogit.py  NOTEBOOK_TEMPLATE_GUIDE.md  README.md  exemplar_OLS_Angrist2008.ipynb
examples/ml/: 01_LinearRegression.md  01_LinearRegression.py  02_RidgeLasso.md  02_RidgeLasso.py  03_DecisionTree_RandomForest.md  03_DecisionTree_RandomForest.py  04_GradientBoosting_XGBoost.md  04_GradientBoosting_XGBoost.py  05_SVM_KNN_NB.md  05_SVM_KNN_NB.py  06_Logistic_Classification.md  06_Logistic_Classification.py  07_Unsupervised_Clustering.md  07_Unsupervised_Clustering.py  08_Dimensionality_Reduction.md  08_Dimensionality_Reduction.py  09_TimeSeries_ML.md  09_TimeSeries_ML.py  10_ModelEvaluation.md  10_ModelEvaluation.py  README.md
examples/rl/: 01_Q_learning.md  01_Q_learning.py  02_SARSA.md  02_SARSA.py  03_DQN.md  03_DQN.py  04_PPO.md  04_PPO.py  05_A2C.md  05_A2C.py
notebooks/: README.md
python_tutorial/: P00_写在前面_如何使用本教程.ipynb  P01_Python基础_变量与数据类型.ipynb  P02_Python基础_条件与循环.ipynb  P03_Python基础_函数与模块.ipynb  P04_数据处理_NumPy数组.ipynb  P05_数据处理_Pandas表格操作.ipynb  P06_数据可视化_Matplotlib画图.ipynb  P07_统计基础_描述性统计与假设检验.ipynb  P08_实战演练_用Python复现一篇实证论文.ipynb  README.md
stata/: README.md
tests/: conftest.py  test_ml.py  test_traditional.py
tutorials/: README.md
(+36 files in other folders)
