[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirlab"
version = "0.1.0"
description = "EmpirLab: econometrics, machine learning and reproducible research toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EmpirLab Contributors"}
]
requires-python = ">=3.10"
keywords = [
    "econometrics",
    "finance",
    "machine-learning",
    "time-series",
    "statistics",
    "deep-learning",
    "reinforcement-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.60.0",
]

[tool.setuptools]
packages = [
    "empirlab",
    "empirlab.traditional",
    "empirlab.ml",
    "empirlab.dl",
    "empirlab.rl",
    "empirlab.llm",
    "empirlab.utils",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
